--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.17",
+    "gasp": "^0.0.2",
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
